--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
+    "canvas-confetti": "^1.9.2",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "canvas-confetti": "^1.9.2"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
-    "vite": "^5.0.8",
-    "gh-pages": "^6.1.0"
+    "vite": "^5.0.8"
   }
 }
